﻿GNomEx Release Notes

5.2.5 (Aug 24, 2011)
------------------------
- Allow samples with duplicate index tags to be combined into one multiplex group.  (Warn user, but permit it.)
- Show experiment type on QC worklist
- Fix bug that was causing delete analysis to fail due to foreign key constraint violation on transfer log table.
- Add "All" checkbox on Experiments view so that admins can view all experiments for all labs without any other filters.

5.2.4 (Aug 22, 2011)
------------------------
- Fix bug that was causing saves to fail on Edit Experiment view.  Bug introduced
  in last release (GNomEx 5.2.3) when code was changed to only check 'Show QC' on 
  internal experiments.
- Fixed experiment lookup to handle experiments with base number.  MySQL query using
  [0-9] changed to %.
- Allow lanes to be added, removed, copied on external experiments for admin,
  owner of experiment and lab manager.
- Show sample sequence lanes on Edit Detail for external sequencing experiments.
  

5.2.3 (Aug 20, 2011)
------------------------
- Fix parse file folder logic for downloads to handle case where canonical path does not match property for experiment directory
- Show usage charts on startup (rather than welcome view) if property show_usage_on_startup set to 'Y'
- Don't check 'show QC' columns for Experiment detail when experiment is an external experiment.

5.2.2 (Aug 17, 2011)
-------------------------
- Simplify welcome screen for "external data sharing site", leaving out links to billing, submit request, etc.
- Added property driven title and welcome message to customize site’s GNomEx UI.
- Fixed bug that was causing fdt uploads to not be register in usage data (on experiments with revision numbers)
- Fixed bug that was causing uploads to go to wrong directory when experiment had revision number


5.2.1 (Aug 16, 2011)
--------------------------
- Allow non-admin gnomex users to view usage charts based on property setting.